syntax = "proto3";
package infres.webservices.protos;
option java_multiple_files = true;
option java_outer_classname = "TournamentsProtos";

//message Person {
//  optional string firstName = 1;
//  optional string lastName = 2;
//  optional string email = 3;
//}
//
//message Tournament {
//  optional string type = 1;
//  optional int32 price = 2;
//}
//
//message Reservation {
//  repeated Person person = 1;
//  repeated Tournament tournament = 2;
//}

// Sends a greeting
service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    }

// The request message containing the user's name.
message HelloRequest {
  optional string name = 1;
}

// The response message containing the greetings
message HelloReply {
  optional string message = 1;
}